# graphics-math

./: README.md  graphics-math.cabal
src/Graphics/Math/Intersect/: PointContainment2D.hs
src/Graphics/Math/Shape/: Circle.hs  Line2D.hs  OrientedRectangle.hs  Point2D.hs  Rectangle2D.hs
src/Graphics/Math/Util/: Angles.hs  Helpers.hs
