name:                graphics-math
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/psandahl/graphics-math#readme
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2018 Patrik Sandahl
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Math.Util.Angles
                       Graphics.Math.Util.Helpers
  build-depends:       base >= 4.7 && < 5
                     , flow
                     , lens
                     , linear
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/psandahl/graphics-math
